--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,9 +4,9 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
+
 @import url('./vite-promo.css');
-@import url('./header.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +22,119 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #171f3b;
+  border-radius: 50%;
+  display: inline-block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  box-sizing: border-box;
+    animation: rotation 2s linear infinite;
+}
+.loader::after {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid;
+  border-color: #FF3D00 transparent;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+
+.loader.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.search-form {
+    
+    align-items: center;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 30px;
+}
+
+.search-input {
+padding-left: 16px;
+border-color: #808080;
+border-radius: 4px;
+width: 272px;
+height: 40px;
+}
+
+.search-btn {
+  border-radius: 8px;
+padding: 8px 16px;
+width: 91px;
+height: 40px;
+background: #4e75ff;
+border: #4e75ff;
+color: #fff;
+}
+button:hover {
+  background: #6c8cff;
+}
+
+ul {
+  list-style-type: none;
+}
+
+  .gallery {
+  display: flex;
+  gap: 24px;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.photo-container{
+  border: 1px solid #808080;
+  width: 360px;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  gap: 28px;
+}
+
+.photo {
+    height: 200px;
+    width: 360px;
+}
+.photo-btn {
+  border-radius: 8px;
+  padding: 8px 16px;
+  height: 40px;
+  background: #4e75ff;
+  border: none;
+  display: flex;
+  align-items: center;
+      margin: auto;
+  margin-top: 32px;
+  color: #fff;
+}  
+
+.is-hidden-btn {
+  display: none;
 }
